--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,8 @@
 
 <body>
     <h1>Video Streaming Demonstration</h1>
-<<<<<<< HEAD
-    <video id="camera-caputure" autoplay loop muted></video>
+    <!-- <img src="{{ url_for('streming') }}"> -->
+    <video id="camera-caputure" autoplay muted></video>
         <script>
             if(Hls.isSupported()){
                 var media = document.getElementById('camera-caputure');
@@ -21,9 +21,6 @@
                 });
             }
         </script>
-=======
-    <img src="{{ url_for('streming') }}">
->>>>>>> c90f21a39d56f8bd79e7e9424b7ed191a964144b
 </body>
 
 </html>
